@@ -7,6 +7,7 @@
 if(COMMAND cmake_policy)
     cmake_policy(SET CMP0003 NEW)
     cmake_policy(SET CMP0005 OLD)
+    cmake_policy(SET CMP0011 OLD)
 endif(COMMAND cmake_policy)
 
 SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)
