@@ -3,8 +3,6 @@ SET(TRANSLATED_PO_FILES zh_CN.po zh_TW.po)
 
 SET(SOURCES_I18N ../src/IBusChewingEngine.gob ../src/IBusChewingEngine-def.c ../src/main.c)
 
-SET(XGETTEXT_OPTIONS --language=C --keyword=_ --keyword=N_)
-
 IF (XGETTEXT_FOUND)
     GETTEXT_CREATE_POT(${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pot OPTION ${XGETTEXT_OPTIONS} SRC ${SOURCES_I18N})
     GETTEXT_CREATE_TRANSLATIONS(${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pot ALL ${TRANSLATED_PO_FILES}
