@@ -38,6 +38,7 @@ enum MAKER_DIALOG_PROPERTY_FLAG{
     INSENSITIVE =0x2,
     INEDITABLE =0x4,
     HAS_TRANSLATION =0x8,
+    TRANSLATION_WITH_CONTEXT =0x10,
 } Maker:Dialog:Property:Flag;
 
 
@@ -55,6 +56,7 @@ typedef struct{
     gchar label[200];
     gchar defaultValue[100];
     const gchar **validValues;
+    gchar *translationContext;
 
     gint min;
     gint max;
@@ -109,16 +111,25 @@ static void propertyContext_free(gpointer ctx_ptr){
 }
 
 static void listStore_append(GtkListStore *listStore,const gchar *str,
+	const gchar *translationContext,
 	MakerDialogPropertyFlags propertyFlags){
     GtkTreeIter iter;
     gtk_list_store_append (listStore, &iter);
 
     if (propertyFlags & MAKER_DIALOG_PROPERTY_FLAG_HAS_TRANSLATION){
-	printf("*** str=%s, _(str)=%s\n",str,_(str));
-	gtk_list_store_set (listStore, &iter,
-		0, str,
-		1, _(str),
-		-1);
+	if (translationContext || propertyFlags & MAKER_DIALOG_PROPERTY_FLAG_TRANSLATION_WITH_CONTEXT){
+	    printf("*** str=%s, _(str)=%s\n",str,g_dpgettext2(NULL,translationContext,str));
+	    gtk_list_store_set (listStore, &iter,
+		    0, str,
+		    1, g_dpgettext2(NULL,translationContext,str),
+		    -1);
+	}else{
+	    printf("*** str=%s, _(str)=%s\n",str,_(str));
+	    gtk_list_store_set (listStore, &iter,
+		    0, str,
+		    1, _(str),
+		    -1);
+	}
     }else{
 	printf("*** str=%s\n",str);
 	gtk_list_store_set (listStore, &iter,
@@ -129,7 +140,8 @@ static void listStore_append(GtkListStore *listStore,const gchar *str,
 }
 
 static gint listStore_find_string(GtkListStore *listStore,const gchar *str,
-       	MakerDialogPropertyFlags propertyFlags){
+	const gchar *translationContext,
+	MakerDialogPropertyFlags propertyFlags){
     g_assert(str);
     int i=0,index=-1;
     GtkTreeIter iter;
@@ -146,7 +158,7 @@ static gint listStore_find_string(GtkListStore *listStore,const gchar *str,
     }
     if (index<0 && !(propertyFlags & MAKER_DIALOG_PROPERTY_FLAG_INEDITABLE)){
 	/* Add new item*/
-	listStore_append(listStore, str,propertyFlags);
+	listStore_append(listStore, str,translationContext,propertyFlags);
 	index=i;
     }
     printf("*** listStore_find_string(%s,%u) index=%d\n",str,propertyFlags,index);
@@ -154,19 +166,20 @@ static gint listStore_find_string(GtkListStore *listStore,const gchar *str,
 }
 
 static gint combo_find_string_index(GtkComboBox *combo,const gchar *str,
+	const gchar *translationContext,
 	MakerDialogPropertyFlags propertyFlags){
     GtkListStore *listStore=GTK_LIST_STORE(gtk_combo_box_get_model(combo));
-    return listStore_find_string(listStore,str, propertyFlags);
+    return listStore_find_string(listStore,str, translationContext,propertyFlags);
 }
 
-static char *combo_get_active_text(GtkComboBox *combo,GValue *gValue){
+static const gchar *combo_get_active_text(GtkComboBox *combo,GValue *gValue){
     GtkTreeIter iter;
     if (!gtk_combo_box_get_active_iter(combo,&iter)){
 	return NULL;
     }
     GtkListStore *listStore=GTK_LIST_STORE(gtk_combo_box_get_model(combo));
     gtk_tree_model_get_value (GTK_TREE_MODEL(listStore), &iter,0,gValue);
-    return g_strdup(g_value_get_string(gValue));
+    return g_value_get_string(gValue);
 }
 
 
@@ -190,7 +203,6 @@ static void on_comboBox_changed_wrap (GtkComboBox *comboBox, gpointer    user_da
 {
     PropertyContext *ctx=(PropertyContext *)user_data;
     GValue value={0};
-    g_value_init(&value, ctx->spec->valueType);
     combo_get_active_text(comboBox, &value);
     G_DEBUG_MSG(2,"on_comboBox_changed_wrap(), key=%s value=%s",ctx->spec->key,g_value_get_string(&value));
     ctx->spec->setFunc(ctx,&value);
@@ -403,14 +415,17 @@ class Maker:Dialog from Gtk:Dialog{
 		    int i;
 		    for(i=0;pSpec->validValues[i]!=NULL;i++){
 			/* Add new item*/
-			listStore_append(listStore, pSpec->validValues[i],pSpec->propertyFlags);
+			listStore_append(listStore, pSpec->validValues[i],
+				pSpec->translationContext,pSpec->propertyFlags);
 		    }
 		    int index=-1;
 		    if (initValue){
-			index=listStore_find_string(listStore,initValue,pSpec->propertyFlags);
+			index=listStore_find_string(listStore,initValue,
+				pSpec->translationContext,pSpec->propertyFlags);
 		    }
 		    if (index<0 && pSpec->defaultValue){
-			index=listStore_find_string(listStore,pSpec->defaultValue,pSpec->propertyFlags);
+			index=listStore_find_string(listStore,pSpec->defaultValue,
+				pSpec->translationContext,pSpec->propertyFlags);
 		    }
 
 		    if (pSpec->propertyFlags & MAKER_DIALOG_PROPERTY_FLAG_INEDITABLE){
@@ -507,10 +522,12 @@ class Maker:Dialog from Gtk:Dialog{
 			int index=-1;
 			if (stringValue){
 			    index=combo_find_string_index(GTK_COMBO_BOX(widget),stringValue,
+				    pSpec->translationContext,
 				    ctx->spec->propertyFlags);
 			}
 			if (index<0 && pSpec->defaultValue){
 			    index=combo_find_string_index(GTK_COMBO_BOX(widget),pSpec->defaultValue,
+				    pSpec->translationContext,
 				    ctx->spec->propertyFlags);
 			}
 			gtk_combo_box_set_active(GTK_COMBO_BOX(widget),index);
@@ -562,7 +579,9 @@ class Maker:Dialog from Gtk:Dialog{
 	    return NULL;
 	}
 	GtkWidget *widget=self_get_widget_by_key(self,key);
-	g_value_init(value,ctx->spec->valueType);
+	if (ctx->spec->valueType!=G_TYPE_STRING){
+	    g_value_init(value,ctx->spec->valueType);
+	}
 	switch(ctx->spec->valueType){
 	    case G_TYPE_BOOLEAN:
 		g_value_set_boolean(value, gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON(widget)));
@@ -575,7 +594,8 @@ class Maker:Dialog from Gtk:Dialog{
 		break;
 	    case G_TYPE_STRING:
 		if (ctx->spec->validValues){
-		    combo_get_active_text (GTK_COMBO_BOX(widget),value);
+		    G_DEBUG_MSG(3,"*** get_widget_value(%s) %s",
+			    key,combo_get_active_text (GTK_COMBO_BOX(widget),value));
 		}else{
 		    g_value_set_string(value, gtk_entry_get_text (GTK_ENTRY(widget)));
 		}
@@ -619,7 +639,8 @@ class Maker:Dialog from Gtk:Dialog{
 	    case G_TYPE_STRING:
 		if (ctx->spec->validValues){
 		    const gchar *str=g_value_get_string(value);
-		    index=combo_find_string_index(GTK_COMBO_BOX(widget),str,ctx->spec->propertyFlags);
+		    index=combo_find_string_index(GTK_COMBO_BOX(widget),str,
+			    ctx->spec->translationContext,ctx->spec->propertyFlags);
 		    gtk_combo_box_set_active (GTK_COMBO_BOX(widget),index);
 		}else{
 		    g_value_set_string(value, gtk_entry_get_text (GTK_ENTRY(widget)));
